// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tokensToCss > emits the dark theme variables 1`] = `
":root[data-theme="dark"] {
  --color-bg: #111318;
  --color-surface: #1A1D24;
  --color-surface-2: #232733;
  --color-border: #333848;
  --color-border-strong: #6B7186;
  --color-text: #ECEEF3;
  --color-text-muted: #A3A9B8;
  --color-accent: #9A9AF2;
  --color-accent-hover: #B4B4F7;
  --color-accent-soft: #26284A;
  --color-on-accent: #111318;
  --color-success: #7FD69B;
  --color-warning: #F5C56B;
  --color-danger: #FF9C92;
  --color-danger-hover: #FFB7AF;
  --color-info: #8DB8FF;
  --color-on-danger: #111318;
  --color-inverse-surface: #ECEEF3;
  --color-on-inverse: #111318;
  --color-level-high-fg: #FF9C92;
  --color-level-high-bg: #3A1A18;
  --color-level-medium-fg: #F5C56B;
  --color-level-medium-bg: #3A2C10;
  --color-level-low-fg: #7FD69B;
  --color-level-low-bg: #15301F;
  --color-scale-1: #5E5EB8;
  --color-scale-2: #7070CC;
  --color-scale-3: #8A8AE4;
  --color-scale-4: #9A9AF2;
  --color-scale-5: #B4B4F7;
  --color-overlay: rgba(0, 0, 0, 0.6);
  --elev-1: 0 1px 2px rgba(0, 0, 0, 0.3);
  --elev-2: 0 4px 12px rgba(0, 0, 0, 0.35);
  --elev-3: 0 16px 40px rgba(0, 0, 0, 0.45);
  --space-1: 4px;
  --space-2: 8px;
  --space-3: 16px;
  --space-4: 24px;
  --space-5: 32px;
  --space-6: 48px;
  --space-7: 64px;
  --size-compact: 32px;
  --size-default: 40px;
  --size-large: 48px;
  --size-row: 40px;
  --icon-sm: 16px;
  --icon-md: 24px;
  --icon-lg: 32px;
  --radius-sm: 4px;
  --radius-md: 8px;
  --radius-lg: 12px;
  --radius-pixel: 0px;
  --radius-round: 999px;
  --line-thin: 1px;
  --line-thick: 2px;
  --font-sans: 'Inter Variable', Inter, system-ui, -apple-system, 'Segoe UI', Roboto, sans-serif;
  --font-pixel: Silkscreen, ui-monospace, 'Cascadia Mono', Consolas, monospace;
  --font-mono: ui-monospace, 'Cascadia Mono', Consolas, monospace;
  --text-caption-size: 12px;
  --text-caption-line: 16px;
  --text-table-size: 14px;
  --text-table-line: 20px;
  --text-body-size: 16px;
  --text-body-line: 24px;
  --text-h3-size: 20px;
  --text-h3-line: 28px;
  --text-h2-size: 24px;
  --text-h2-line: 32px;
  --text-h1-size: 32px;
  --text-h1-line: 40px;
  --weight-regular: 400;
  --weight-medium: 500;
  --weight-semibold: 600;
  --dur-fast: 120ms;
  --dur-base: 200ms;
  --dur-slow: 320ms;
  --dur-fade-base: 200ms;
  --dur-fade-slow: 320ms;
  --ease-out: cubic-bezier(0, 0, 0.2, 1);
  --ease-in: cubic-bezier(0.4, 0, 1, 1);
  --ease-standard: cubic-bezier(0.2, 0, 0, 1);
  --ease-pixel: steps(4, end);
  --motion-shift: 4px;
  --motion-scale: 0.98;
  --z-popover: 20;
  --z-toast: 30;
  --z-dialog: 40;
  --measure-tooltip: 280px;
  --measure-popover: 360px;
  --measure-toast: 400px;
  --measure-dialog: 520px;
}"
`;

exports[`tokensToCss > emits the light theme variables 1`] = `
":root[data-theme="light"] {
  --color-bg: #F7F7FA;
  --color-surface: #FFFFFF;
  --color-surface-2: #F0F1F5;
  --color-border: #DADCE5;
  --color-border-strong: #7E8494;
  --color-text: #16181D;
  --color-text-muted: #5B6070;
  --color-accent: #4B4BC8;
  --color-accent-hover: #3B3BA8;
  --color-accent-soft: #ECECFB;
  --color-on-accent: #FFFFFF;
  --color-success: #1E6B3A;
  --color-warning: #8A5A00;
  --color-danger: #A3261D;
  --color-danger-hover: #861E17;
  --color-info: #1F5BB8;
  --color-on-danger: #FFFFFF;
  --color-inverse-surface: #16181D;
  --color-on-inverse: #F7F7FA;
  --color-level-high-fg: #A3261D;
  --color-level-high-bg: #FDE7E4;
  --color-level-medium-fg: #7A5000;
  --color-level-medium-bg: #FFF1D6;
  --color-level-low-fg: #1E6B3A;
  --color-level-low-bg: #E3F4E8;
  --color-scale-1: #8B8BDB;
  --color-scale-2: #6F6FD2;
  --color-scale-3: #5A5ACB;
  --color-scale-4: #4B4BC8;
  --color-scale-5: #3B3BA8;
  --color-overlay: rgba(22, 24, 29, 0.4);
  --elev-1: 0 1px 2px rgba(22, 24, 29, 0.06), 0 1px 3px rgba(22, 24, 29, 0.08);
  --elev-2: 0 4px 12px rgba(22, 24, 29, 0.1), 0 2px 4px rgba(22, 24, 29, 0.06);
  --elev-3: 0 16px 40px rgba(22, 24, 29, 0.16), 0 4px 12px rgba(22, 24, 29, 0.08);
  --space-1: 4px;
  --space-2: 8px;
  --space-3: 16px;
  --space-4: 24px;
  --space-5: 32px;
  --space-6: 48px;
  --space-7: 64px;
  --size-compact: 32px;
  --size-default: 40px;
  --size-large: 48px;
  --size-row: 40px;
  --icon-sm: 16px;
  --icon-md: 24px;
  --icon-lg: 32px;
  --radius-sm: 4px;
  --radius-md: 8px;
  --radius-lg: 12px;
  --radius-pixel: 0px;
  --radius-round: 999px;
  --line-thin: 1px;
  --line-thick: 2px;
  --font-sans: 'Inter Variable', Inter, system-ui, -apple-system, 'Segoe UI', Roboto, sans-serif;
  --font-pixel: Silkscreen, ui-monospace, 'Cascadia Mono', Consolas, monospace;
  --font-mono: ui-monospace, 'Cascadia Mono', Consolas, monospace;
  --text-caption-size: 12px;
  --text-caption-line: 16px;
  --text-table-size: 14px;
  --text-table-line: 20px;
  --text-body-size: 16px;
  --text-body-line: 24px;
  --text-h3-size: 20px;
  --text-h3-line: 28px;
  --text-h2-size: 24px;
  --text-h2-line: 32px;
  --text-h1-size: 32px;
  --text-h1-line: 40px;
  --weight-regular: 400;
  --weight-medium: 500;
  --weight-semibold: 600;
  --dur-fast: 120ms;
  --dur-base: 200ms;
  --dur-slow: 320ms;
  --dur-fade-base: 200ms;
  --dur-fade-slow: 320ms;
  --ease-out: cubic-bezier(0, 0, 0.2, 1);
  --ease-in: cubic-bezier(0.4, 0, 1, 1);
  --ease-standard: cubic-bezier(0.2, 0, 0, 1);
  --ease-pixel: steps(4, end);
  --motion-shift: 4px;
  --motion-scale: 0.98;
  --z-popover: 20;
  --z-toast: 30;
  --z-dialog: 40;
  --measure-tooltip: 280px;
  --measure-popover: 360px;
  --measure-toast: 400px;
  --measure-dialog: 520px;
}"
`;
